<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReFlow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--THEME REALATED-->

    <string name="pref_appearance_theme_key">pref_appearance_theme</string>
    <string name="pref_appearance_theme_title">Theme</string>


    <!--LOCALE RELATED-->

    <string name="pref_appearance_langforce_key">pref_appearance_langforce_key</string>
    <string name="pref_appearance_langforce_title">Language</string>
    <string name="action_sort">Sort</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_gotosub">Go to Subreddit</string>
    <string name="action_Search">Search</string>
    <string name="reflow">ReFlow</string>
    <string name="test">Test</string>

</resources>
