<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item android:id="@+id/action_mainactivity_newpost"
          android:title="@string/action_settings"
          android:icon="@android:drawable/ic_menu_sort_by_size"
          android:orderInCategory="99"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_mainactivity_sort"
          android:title="@string/action_sort"
          android:icon="@drawable/ic_action_edit"
          android:orderInCategory="98"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_mainactivity_refresh"
          android:title="@string/action_refresh"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_mainactivity_search"
          android:title="@string/action_search"
          android:orderInCategory="101"
          app:showAsAction="never"/>

    <item android:id="@+id/action_mainactivity_gotosub"
          android:title="@string/action_gotosub"
          android:orderInCategory="102"
          app:showAsAction="never"/>

</menu>
